--- a/Python Basics/Basics-Python.ipynb
+++ b/Python Basics/Basics-Python.ipynb
@@ -49,23 +49,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.12.3' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'c:/Users/hrand/AppData/Local/Microsoft/WindowsApps/python3.12.exe -m pip install ipykernel -U --user --force-reinstall'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n",
+      "10\n"
      ]
     }
    ],
    "source": [
-    "print(\"Hello World!\")"
+    "# Print Statements \n",
+    "print(\"Hello World!\")\n",
+    "print(10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check Data Type\n",
+    "\n",
+    "a = 10\n",
+    "print(type(a))\n",
+    "\n",
+    "a = \"Deep Learning\"\n",
+    "print(type(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "from IPython.core.prefilter import Integer\n",
+    "\n",
+    "if type ('Deep Learning') == str:\n",
+    "    print(True)\n",
+    "\n",
+    "# mainly used in data validation "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "78.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Variable and Expressions\n",
+    "\n",
+    "# Variable - a rcerved memory location\n",
+    "radius = 5\n",
+    "pi =3.14\n",
+    "\n",
+    "# Statement - Combination of language syntaxes (numbers, keybwords, variables)\n",
+    "area  = pi * radius * radius\n",
+    "print(area)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Restrictions when naming variables\n",
+    "\n",
+    "* cant use keywords or reserved function names as variables\n",
+    "\n",
+    "* Shouldn't use spacces  \n",
+    "\n",
+    "    insted of `grand total = 100` use `grand_total =100`\n",
+    "\n",
+    "\n",
+    "* Variable name must start with a letter or  an underscore (don't start with numbers)\n",
+    "\n",
+    "* Variable names are case sensitive "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -75,7 +171,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.3"
   }
  },
