--- a/Python Basics/Basics-Python.ipynb
+++ b/Python Basics/Basics-Python.ipynb
@@ -158,10 +158,250 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Explicit Typiying - COonvertion of types by calling the type constructor \n",
+    "\n",
+    "b = str(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Strings \n",
+    "\n",
+    "list of  characters  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string1 = 'Deep Learning'\n",
+    "string2  = \"Deep Learning\"\n",
+    "\n",
+    "type(string2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(string2) #  Space is also  considered as a string "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#  get the index of a  character \n",
+    "# Lets say i want to get the character of the r \n",
+    "\n",
+    "string2.index('r')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'n'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# extract a single ccharacter \n",
+    "\n",
+    "string1[-1]\n",
+    "string1[-2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deep\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Creating a sub sttriing - SLICING \n",
+    "\n",
+    "sub_sttring = string1[0:4] # string1[:4]\n",
+    "print(sub_sttring)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DEEP LEARNING\n",
+      "deep learning\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Upper and Lower Case \n",
+    "\n",
+    "strings = \"Deep Learning\"\n",
+    "print(strings.upper())\n",
+    "print(strings.lower())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "This is about deep learning \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Logistcs with Strings \n",
+    "\n",
+    "sl = \"Deep Learning is very easy!\"\n",
+    "\n",
+    "BOOL = sl.startswith('De')\n",
+    "\n",
+    "print(BOOL)\n",
+    "print(sl.endswith('easy!'))\n",
+    "\n",
+    "if sl.startswith(\"Deep\"):\n",
+    "    print('This is about deep learning')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Deep', 'Learning', 'is', 'very', 'easy']\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# String Spliting \n",
+    "\n",
+    "s2 = \"Deep Learning is very easy\"\n",
+    "\n",
+    "words = s2.split(\" \")\n",
+    "\n",
+    "print(words)\n",
+    "print(type(words))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['By strict definition, a deep neural network, or DNN, is a neural network with three or more layers', ' In practice, most DNNs have many more layers', ' DNNs are trained on large amounts of data to identify and classify phenomena, recognize patterns and relationships, evaluate posssibilities, and make predictions and decisions', ' While a single-layer neural network can make useful, approximate predictions and decisions, the additional layers in a deep neural network help refine and optimize those outcomes for greater accuracy', ' Deep learning drives many applications and services that improve automation, performing analytical and physical tasks without human intervention', ' It lies behind everyday products and services—e', 'g', ', digital assistants, voice-enabled TV remotes,  credit card fraud detection—as well as still emerging technologies such as self-driving cars and generative AI', ' ']\n",
+      "By strict definition, a deep neural network, or DNN, is a neural network with three or more layers\n"
+     ]
+    }
+   ],
+   "source": [
+    "para = \"By strict definition, a deep neural network, or DNN, is a neural network with three or more layers. In practice, most DNNs have many more layers. DNNs are trained on large amounts of data to identify and classify phenomena, recognize patterns and relationships, evaluate posssibilities, and make predictions and decisions. While a single-layer neural network can make useful, approximate predictions and decisions, the additional layers in a deep neural network help refine and optimize those outcomes for greater accuracy. Deep learning drives many applications and services that improve automation, performing analytical and physical tasks without human intervention. It lies behind everyday products and services—e.g., digital assistants, voice-enabled TV remotes,  credit card fraud detection—as well as still emerging technologies such as self-driving cars and generative AI. \"\n",
+    "\n",
+    "senetences = para.split('.')\n",
+    "print(senetences)\n",
+    "print(senetences[0])"
+   ]
   }
  ],
  "metadata": {
